--- a/02-dices/02-dices/Base.lproj/Main.storyboard
+++ b/02-dices/02-dices/Base.lproj/Main.storyboard
@@ -17,7 +17,24 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="casino-background" translatesAutoresizingMaskIntoConstraints="NO" id="KTM-zB-uOU">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647.00000000000011"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo-casino" translatesAutoresizingMaskIntoConstraints="NO" id="Xs5-pS-bCB">
+                                <rect key="frame" x="40" y="80" width="295" height="224.5"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="KTM-zB-uOU" secondAttribute="bottom" id="23l-wo-0dR"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Xs5-pS-bCB" secondAttribute="trailing" constant="40" id="8OG-KB-GzK"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="KTM-zB-uOU" secondAttribute="trailing" id="D94-o9-xVp"/>
+                            <constraint firstItem="Xs5-pS-bCB" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="WwV-Dz-dne"/>
+                            <constraint firstItem="Xs5-pS-bCB" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="60" id="clr-Qw-4qj"/>
+                            <constraint firstItem="KTM-zB-uOU" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="j0j-yd-9hT"/>
+                            <constraint firstItem="KTM-zB-uOU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="vB9-l2-ApY"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
@@ -25,4 +42,8 @@
             </objects>
         </scene>
     </scenes>
+    <resources>
+        <image name="casino-background" width="303" height="428.5"/>
+        <image name="logo-casino" width="335" height="224.5"/>
+    </resources>
 </document>
