Se agregan imagenes de dados y botón tirar

--- a/02-dices/02-dices/Base.lproj/Main.storyboard
+++ b/02-dices/02-dices/Base.lproj/Main.storyboard
@@ -24,26 +24,57 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo-casino" translatesAutoresizingMaskIntoConstraints="NO" id="Xs5-pS-bCB">
                                 <rect key="frame" x="40" y="80" width="295" height="224.5"/>
                             </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="34" translatesAutoresizingMaskIntoConstraints="NO" id="Kzm-mi-lU6">
+                                <rect key="frame" x="100.5" y="368.5" width="174" height="70"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dado1" translatesAutoresizingMaskIntoConstraints="NO" id="VGf-83-chh">
+                                        <rect key="frame" x="0.0" y="0.0" width="70" height="70"/>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dado1" translatesAutoresizingMaskIntoConstraints="NO" id="hgc-HO-T5O">
+                                        <rect key="frame" x="104" y="0.0" width="70" height="70"/>
+                                    </imageView>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="89J-2b-F0o">
+                                <rect key="frame" x="96.5" y="518.5" width="182" height="45"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Heavy" family="Avenir Next" pointSize="24"/>
+                                <state key="normal" title="Tirar los dados">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="rollPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="VNv-hn-I7e"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="KTM-zB-uOU" secondAttribute="bottom" id="23l-wo-0dR"/>
+                            <constraint firstItem="Kzm-mi-lU6" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="70" id="7hI-A3-QGh"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Xs5-pS-bCB" secondAttribute="trailing" constant="40" id="8OG-KB-GzK"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="KTM-zB-uOU" secondAttribute="trailing" id="D94-o9-xVp"/>
+                            <constraint firstItem="Kzm-mi-lU6" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="QmZ-Ga-1lX"/>
                             <constraint firstItem="Xs5-pS-bCB" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="WwV-Dz-dne"/>
                             <constraint firstItem="Xs5-pS-bCB" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="60" id="clr-Qw-4qj"/>
+                            <constraint firstItem="89J-2b-F0o" firstAttribute="top" secondItem="Kzm-mi-lU6" secondAttribute="bottom" constant="80" id="fLS-7R-3YH"/>
+                            <constraint firstItem="89J-2b-F0o" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="hbD-nm-6oR"/>
                             <constraint firstItem="KTM-zB-uOU" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="j0j-yd-9hT"/>
                             <constraint firstItem="KTM-zB-uOU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="vB9-l2-ApY"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="imageViewDiceLeft" destination="VGf-83-chh" id="0A9-mE-piP"/>
+                        <outlet property="imageViewDiceRight" destination="hgc-HO-T5O" id="svp-v0-TNO"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="97.601199400299862"/>
         </scene>
     </scenes>
     <resources>
         <image name="casino-background" width="303" height="428.5"/>
+        <image name="dado1" width="70" height="70"/>
         <image name="logo-casino" width="335" height="224.5"/>
     </resources>
 </document>
